--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
   </head>
   <h1>Hello there!</h1>
   <body>
-    <span id="star-container">
+
+    <div id="star-container">
       <span id="star1" class="star">star01</span>
       <span id="star2" class="star">star02</span>
       <span id="star3" class="star">star03</span>
       <span id="star4" class="star">star04</span>
       <span id="star5" class="star">star05</span>
-    </span>
+    </div>
+    <div>
       <input type="text" id="comment" />
-
+    </div>
     <div><a href="/me.html">My other page</a></div>
   </body>
 </html>
